# doc/openapi.yaml
@@ -263,11 +263,11 @@ paths:
             schema:
               type: object
               properties:
-                decision:
+                status:
                   type: string
-                  description: 面談日時を決定するかどうか
+                  description: 面談状況
               required:
-                - decision
+                - status
       parameters:
         - $ref: '#/components/parameters/APItoken'
 components:
@@ -331,7 +331,6 @@ components:
           description: 面談状況
       required:
         - user_name
-        - interview_datetime
         - interview_status
   securitySchemes: {}
   parameters:
